<resources>
    <string name="app_name">FindMate</string>
    <string name="app_name_title">Find Mate</string>
    <string name="sex_m">Парень</string>
    <string name="sex_w">Девушка</string>

    <!-- Date Formatter Extension -->
    <string name="date_formatter_now">Только что</string>
    <string name="date_formatter_date">dd MMM</string>
    <plurals name="date_formatter_past_weeks">
        <item quantity="one">%1$d неделя назад</item>
        <item quantity="other">%1$d недели назад</item>
    </plurals>
    <plurals name="date_formatter_past_days">
        <item quantity="one">%1$d день назад</item>
        <item quantity="other">%1$d дня назад</item>
    </plurals>
    <plurals name="date_formatter_past_hours">
        <item quantity="one">%1$d час назад</item>
        <item quantity="other">%1$d часа назад</item>
    </plurals>
    <plurals name="date_formatter_past_minutes">
        <item quantity="one">%1$d минуту назад</item>
        <item quantity="other">%1$d минуты назад</item>
    </plurals>

    <string name="createPostTitle">Создать анкету</string>
    <string name="createPostAgeTitle">Мой возраст</string>
    <string name="createPostAgeHelper">от 1 до 99</string>
    <string name="createPostSexTitle">Мой пол</string>
    <string name="createPostSexHelper">1 - кун 2 - тян 3 - не отвечать</string>
    <string name="createPostLocationTitle">Мой город</string>
    <string name="createPostLocationHelper">Минск, Гродно, Беларусь</string>
    <string name="createPostTextTitle">Пост</string>
    <string name="createPostText">Создать</string>
    <string name="createPostSuccess">Ваша анкета опубликована</string>
    <string name="createPostError">Ошибка при создании анкеты</string>
    <string name="createPostTextHelper">*обязательное поле</string>
    <string name="createPostTextError">поле должно содержать больше 25 и меньше 4000 символов</string>

    <string name="createPostRules">Чем подробнее вы расскажите о себе и кого ищите, тем больше шансов на успех\n\nПоля локации, пола, возраста не обязательны. Они подсказывают на что можно обратить внимание в вашей анкете\n\nДобавьте удобный способ связи</string>

    <string name="createPostRulesShort">Расскажи о себе\nи о том кого хочешь найти</string>

    <string name="popup_report">Пожаловаться</string>
    <string name="postsLocationFilter">Поиск по локации</string>
    <string name="mainFilterLabel">Фильтр</string>
    <string name="reportSuccess">Жалоба отправлена</string>
    <string name="mainFailedNoElements">Мы не смогли найти анкеты по запрошеной локации</string>
    <string name="mainFailedError">Ой! Что-то пошло не так\nПри загрузке анкет возникла ошибка</string>
    <string name="mainRefreshTitle">Обновить</string>
</resources>